bpo-35284: Fix the error handling in the compiler's compiler_call()

compiler_call() needs to check if an error occurred during the
maybe_optimize_method_call() call.